feat: add create attempt docs
